# hw_19.2

./: .gitignore  manage.py  pyproject.toml  requirements.txt
catalog/: urls.py
config/: settings.py  urls.py
